# Python-Programming

./: README.md
Algorithmic-problems/: README.md
Automating-with-Python/: README.md
Baseball-Analytics/: MLB-AL-East-Division-Analytics.ipynb  MLB-East-Division-Analytics.ipynb  README.md
Calculator/: README.md
Calculator-GUI/: README.md
Chemistry_using_Python/: README.md
Convert_Audio_to_Text/: README.md
Cosine-Similarity/: README.md
Data_Analytics_toolkit/: README.md  data_analytics_toolkit.py  requirements.txt
Data_Extraction_Pipeline_with_Marker/: GoogleColab-run.ipynb  README.md  asco_marker_extraction.py  pyproject.toml  requirements.txt
Data_Extraction_Pipeline_with_Marker/data/marker_outputs/: al-sukhun-et-al-2024-systemic-treatment-of-patients-with-metastatic-breast-cancer-asco-resource-stratified-guideline copy.json
Data_Extraction_Pipeline_with_Marker/data/processed/: al-sukhun-et-al-2024-systemic-treatment-of-patients-with-metastatic-breast-cancer-asco-resource-stratified-guideline copy_final.json
Data_Extraction_Pipeline_with_Marker/scripts/: asco_pubmed_enrichment.py
Deep_Neural_Network/: README.md
Deep_Neural_Network_app/: README.md
Distance_between_two_locations/: README.md  haversine.py
Docker_containers/: README.md
Excel_with_Python/: README.md  example.xlsx  excel_with_python.py
Execution Time of a Python Code/: README.md
File-Reader/: README.md
Finance_Analysis_using_Python/: README.md
Google_Trends_Analysis/: Data_Extraction_from_Google_Trends_with_Pytrends.ipynb  README.md  google_trends_data.csv
(+121 files in other folders)
